--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,1 +1,20 @@
+li {
+  list-style: none;
+}
+.register {
+  display: flex;
+  flex-direction: column;
+  width: 18em;
 
+}
+.register li {
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: space-between;
+  margin-top: .5em;
+}
+
+.register input {
+  border: 1px solid black;
+  border-bottom: none;
+}
