--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,6 +35,7 @@ header a:hover {
   transition: all 2s ease;
 }
 
+/** nav **/
 
 .nav a {
   color: #E2FDFF;
@@ -104,7 +105,6 @@ header a:hover {
 .form-style {
   display: flex;
   flex-direction: column;
-  margin-left: 5em;
   width: 18em;
 
 
@@ -118,4 +118,14 @@ header a:hover {
 
 .form-style input {
   border: 1px solid black;
+}
+
+/** Auth **/
+.auth {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5em;
+
 }
