--- a/assets/styles.css
+++ b/assets/styles.css
@@ -143,17 +143,44 @@ header h1 {
   text-align: center;
 }
 
+.doctors {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.doctors tr th,
+.doctors tr td {
+  box-shadow: .5px 2px 5px #004C52;
+  font-size: 1em;
+  padding: .5em;
+  background-color: #F2EFFA;
+  color: #613DC1;
+  text-align: center;
+}
+
 .checklist tr th,
 .checklist tr td {
   box-shadow: .5px 2px 5px #004C52;
   font-size: 1.5em;
   padding: 1em;
-
 }
 
 .checklist tr th {
   background-image: linear-gradient(45deg, #613DC1, #7454C9);
   color: #E2FDFF;
+}
+
+.check {
+  width: 3em;
+}
+
+.check div{
+  padding: .5px 5px 0px 5px;
+  position: relative;
+  text-align: center;
+  width: 1.1em;
+  box-shadow: 0px 0px 2px #004C52;
+  left: 35%;
 }
 
 /** Patient **/
@@ -162,13 +189,14 @@ header h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 5em;
 }
 
 .patient article {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 1em;
+  margin-bottom: 2em;
   font-size: 1.5em;
   border-radius: 3px;
   background-image: linear-gradient(45deg, #613DC1, #7454C9);
