--- a/assets/styles.css
+++ b/assets/styles.css
@@ -255,6 +255,14 @@ text-align: center;
   text-align: center;
 }
 
+.doctor {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1em;
+
+}
+
 
 
 /** Patient **/
