--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,11 @@ li {
   list-style: none;
 }
 
+h2 {
+  color: #613DC1;
+  margin-top: 1em;
+}
+
 header,
 footer {
   background-image: linear-gradient(45deg, #613DC1, #7454C9);
