--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,9 +4,15 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  height: 100%;
+}
+
 body{
   background-color: #FFFFFF;
-  height: 70em;
+  height: 100vh;
+  width: 100vw;
 }
 
 li {
@@ -20,7 +26,7 @@ h2 {
 }
 
 section, main {
-  min-height: 54em;
+  min-height: 72%;
 }
 
 
@@ -31,7 +37,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 8em;
+  height: 14%;
   box-shadow: 0px 2px 3px black;
 }
 
