--- a/assets/styles.css
+++ b/assets/styles.css
@@ -203,7 +203,8 @@ header h1 {
   color: #613DC1;
 }
 
-.form-style input[type=submit] {
+.form-style input[type=submit],
+.form-style input[type=reset] {
   justify-content: center;
   color: #E2FDFF;
 }
@@ -253,6 +254,11 @@ header h1 {
   background-image: linear-gradient(45deg, #613DC1, #7454C9);
   box-shadow: 0px 0px 5px #004C52;
   border-radius: 5px;
+}
+
+.check-button {
+  min-width: 12em;
+  padding: .5em;
 }
 
 .check-submit:hover {
@@ -408,6 +414,17 @@ text-align: center;
   background-image: linear-gradient(45deg, #613DC1, #7454C9);
   color: #E2FDFF;
   padding: .5em 2em .5em 2em;
+}
+
+/** Payment **/
+.payment {
+  display: flex;
+  justify-content: space-around;
+  border: none;
+}
+
+.payment input {
+  min-width: 6em;
 }
 
 /** link **/
